# DLP-Windows

./: CMakeLists.txt  README.md  main.cpp
Source/Configuration/: KeyValue.cpp  KeyValue.h
Source/Controllers/: ThreadsController.cpp  ThreadsController.h
Source/Core/: Core.h
Source/Modules/: AutoRun.cpp  AutoRun.h  Keylogger.cpp  Keylogger.h  TaskManagerAnalyzer.cpp  TaskManagerAnalyzer.h
Source/Secure/: ActivitySecure.cpp  ActivitySecure.h
